--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -75,6 +75,13 @@
 							<li><a href="{{ BASE_PATH }}/tips"><i class="fa fa-newspaper-o"></i> Blog</a></li>
 							<li><a href="{{ BASE_PATH }}/about"><i class="fa fa-info-circle"></i> About</a></li>
 						</ul>
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="https://github.com/StratifyLabs" target="_blank"><i class="fa fa-github fa-2x"></i> </a></li>
+							<li><a href="https://twitter.com/stratifylabs" target="_blank"><i class="fa fa-twitter fa-2x"></i> </a></li>
+							<li><a href="https://www.facebook.com/stratifylabs/" target="_blank"><i class="fa fa-facebook fa-2x"></i> </a></li>
+							<li><a href="https://plus.google.com/b/111238224545721138802/111238224545721138802" target="_blank"><i class="fa fa-google-plus fa-2x"></i> </a></li>
+
+						</ul>
 					</div>
 				</div>
 			</div>
