--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -102,8 +102,11 @@
 
 	{% if page.ad %}
 	<div class="filter-col-ctn" style="padding: 10px;text-align: center;">
-	  <img src="/images/{{ page.ad['image'] }}" style="margin-bottom:20px;">
-	  <p>{{ page.ad['description'] }}</p>
+		<a href="{{ BASE_PATH }}{{ page.ad['link'] }}" >
+		<h4>{{ page.ad['title'] }}</h4>
+		  <img src="/images/{{ page.ad['image'] }}" style="margin-bottom:20px;" class="post_image">
+		  <p>{{ page.ad['description'] }}</p>
+		</a>
 	</div>
 	{% endif %}
 
