--- a/_includes/JB/blog-sidebar.html
+++ b/_includes/JB/blog-sidebar.html
@@ -20,7 +20,7 @@
     {% assign sorted_cats = (site.categories | sort:0) %}
     {% for cat in sorted_cats %}
 
-      {% capture same_page %}/tips/category/{{ cat[0] | replace: ' ', '-' }}/{% endcapture %}
+      {% capture same_page %}/tips/category/{{ cat[0] | replace: ' ', '-' | downcase }}/{% endcapture %}
 	      
       <li><a href="{{ same_page | prepend: site.baseurl }}" {% if page.url == "same_page" %}class="is-active"{% endif %}>{{ cat[0] | capitalize }}</a> <span class="badge">{{ cat[1].size }}</span></li>
 
@@ -39,7 +39,7 @@
           {% assign sorted_tags = (site.tags | sort:0) %}
 
           {% for tag in sorted_tags %}
-            <a href="{{ site.baseurl }}/tips/tag/{{ tag | first | slugize | replace: ' ', '-' }}/" class="">{{ tag | first }}</a>
+            <a href="{{ site.baseurl }}/tips/tag/{{ tag | first | slugize | replace: ' ', '-' | downcase }}/" class="">{{ tag | first }}</a>
           {% endfor %}
 
           </div>
