--- a/_includes/themes/twitter/page-tags.html
+++ b/_includes/themes/twitter/page-tags.html
@@ -41,12 +41,12 @@ $(document).ready( function(){
 		<div class="col-md-8 posts-list">
 
 {% if page.archive-type == 'Category' %}
-	{% assign archive = page.title %}
+	{% assign archive = page.archive-keyword %}
   {% assign posts = site.categories.[archive] %}
   {% assign limit = 5 %}
 		<div id="catID" data-catID="{{ archive }}" class="hidden"></div>
 {% elsif page.archive-type == 'Tag' %}
-	{% assign archive = page.title | downcase %}
+	{% assign archive = page.archive-keyword | downcase %}
   {% assign posts = site.tags.[archive] %}
   {% assign limit = 5 %}
 		<div id="tagID" data-tagID="{{ archive }}" class="hidden"></div>
@@ -98,8 +98,8 @@ $(document).ready( function(){
 			<div class="post-categories">
 				<strong>Categories:</strong>
 					{% for cat in post.category %}
-					{% capture same_page %}/tips/category/{{ cat | replace: ' ', '-' }}/{% endcapture %}
-					<a href="{{ same_page | prepend: site.baseurl }}" style="font-size:14px;text-transform:uppercase;">{{ cat }}</a>{% unless forloop.last %},{% endunless %}
+					{% capture same_page %}/tips/category/{{ cat | replace: ' ', '-' | downcase }}/{% endcapture %}
+					<a href="{{ BASE_PATH }}{{ same_page | downcase }}" style="font-size:14px;text-transform:uppercase;">{{ cat }}</a>{% unless forloop.last %},{% endunless %}
 					{% endfor %}
 			</div>
 			<div class="post-date">
@@ -114,7 +114,7 @@ $(document).ready( function(){
 				<div class="sh-columns post-meta-comments">
 					<span class="post-meta-categories"> <i class="fa fa-tag"></i>
 						{% for tag in post.tags %}
-						<a href="{{ site.baseurl }}/tips/tag/{{ tag | replace: ' ', '-' }}/">{{ tag }}</a>
+						<a href="{{ site.baseurl }}/tips/tag/{{ tag | replace: ' ', '-' | downcase }}/">{{ tag }}</a>
 						{% endfor %}
 					</span>
 				</div>
