--- a/_includes/themes/twitter/page-tags.html
+++ b/_includes/themes/twitter/page-tags.html
@@ -6,14 +6,14 @@ function register_click(name){
 		$("#" + name).addClass("active");
 		$(".tagged").addClass("hidden");
 		$("." + name).removeClass("hidden");
-	});	
+	});
 }
 
 $(document).ready( function(){
 	{% for tag in site.tags %}
-	register_click("{{ tag[0] }}");	
+	register_click("{{ tag[0] }}");
 	{% endfor %}
-	
+
 	$("#all").click(function(){
 		$(".tagged").removeClass("hidden");
 		$(".tag-list-item").removeClass("active");
@@ -24,9 +24,9 @@ $(document).ready( function(){
 
 <div style="background: #344555; color: #fff;">
 	<div class="container">
-		<div class="row" style="margin-top: 50px; margin-bottom: 50px;">
+		<div class="row header_row">
 			<div class="col-md-3 text-center">
-				<h1><i class="{{ page.sections['icon'] }}"></i></h1>
+				<h2><i class="{{ page.sections['icon'] }}"></i></h2>
 			</div>
 			<div class="col-md-9">
 				<h1><b>{{ page.sections['intro'] }}</b></h1>
@@ -140,4 +140,3 @@ $(document).ready( function(){
 	</div>
 	<div class="infinite-spinner"></div>
 </div>
-
