--- a/_includes/themes/twitter/signup.html
+++ b/_includes/themes/twitter/signup.html
@@ -2,7 +2,7 @@
 			<div class="col-md-12 text-center">
 			<!-- Button trigger modal -->
 			<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#emailModal">
-			  Signup for Availablity and Special Offers
+			  Signup
 			</button>
 
 			<!-- Modal -->
@@ -16,12 +16,13 @@
 			      <div class="modal-body">
 
 						<!-- Begin MailChimp Signup Form -->
-						<form action="//stratifylabs.us13.list-manage.com/subscribe/post?u=84779f6d7271364d8f9420147&amp;id=7b3b32c0f9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+						<form action="//stratifylabs.us13.list-manage.com/subscribe/post?u=84779f6d7271364d8f9420147&amp;id=7b3b32c0f9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form form-inline" target="_blank" novalidate>
 						    <div id="mc_embed_signup_scroll" class="form-group">
 						   	<label class="sr-only" for="mce-EMAIL">Name</label>
 							<input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
 						    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 						    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_84779f6d7271364d8f9420147_7b3b32c0f9" tabindex="-1" value=""></div>
+								<p> </p>
 						    <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-success">Sign me up!</button>
 						    </div>
 						</form>
