--- a/_includes/JB/collaborate-interest-form.html
+++ b/_includes/JB/collaborate-interest-form.html
@@ -1,11 +1,11 @@
 {% comment %}<!--
 Collaborative Workspace Form.
 
-This file can be included on any page where the collaborative workspace 
-interest form should be displayed.  Currently it is a part of the stand alone 
-form page (/collaborate-interest-form/) as well as included in the 
+This file can be included on any page where the collaborative workspace
+interest form should be displayed.  Currently it is a part of the stand alone
+form page (/collaborate-interest-form/) as well as included in the
 collaborative workspace page (/collaborate/).
-        
+
 -->{% endcomment %}
 
 <form name="ciForm" id="ciForm" method="POST">
@@ -135,8 +135,8 @@ collaborative workspace page (/collaborate/).
   </div>
   <div class="row">
     <div class="col-xs-12">
-    	<div class="form-group">	
-				<button type="submit" class="btn btn-lg btn-success submitbtn">Submit</button>
+    	<div class="form-group">
+				<button type="submit" class="btn btn-lg btn-success submitbtnform">Submit</button>
       </div>
     </div>
   </div>
