--- a/_includes/JB/stratify-os-feature-brief.html
+++ b/_includes/JB/stratify-os-feature-brief.html
@@ -8,7 +8,7 @@
 		<h3><i class="fa fa-folder-open"></i> <b>Easy-to-use</b> posix filesystem</h3>
 		<h3><i class="fa fa-desktop"></i> Free <b>cross-platform</b> SDK</h3>
 		<h3><i class="fa fa-usb"></i> <b>Simple</b> development over USB</h3>
-		<a class="btn btn-lg btn-success" href="{{ BASE_PATH }}/stratifyos">Learn More</a>
+		<a class="btn btn-lg btn-success" href="{{ BASE_PATH }}/Stratify-OS/">Learn More</a>
 		<a class="btn btn-lg btn-success" href="{{ BASE_PATH }}/download/">Download</a>
 		</div>
 		<div class="col-md-6" style="margin-bottom: 2.0em">
