--- a/_includes/themes/twitter/page-tags.html
+++ b/_includes/themes/twitter/page-tags.html
@@ -140,3 +140,9 @@ $(document).ready( function(){
 	</div>
 	<div class="infinite-spinner"></div>
 </div>
+
+<div style="background: #ddd;">
+	<div class="container">
+		{% include themes/twitter/signup.html %}
+	</div>
+</div>
