--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -143,3 +143,9 @@
 </article>
 
 </div>
+
+<div style="background: #ddd;">
+	<div class="container">
+		{% include themes/twitter/signup.html %}
+	</div>
+</div>
