--- a/_includes/JB/contact-us-form.html
+++ b/_includes/JB/contact-us-form.html
@@ -1,10 +1,10 @@
 {% comment %}<!--
 Contact Form.
 
-This file can be included on any page where the collaborative workspace 
-interest form should be displayed.  Currently it is a part of the stand alone 
+This file can be included on any page where the collaborative workspace
+interest form should be displayed.  Currently it is a part of the stand alone
 form page (/contact-us/).
-        
+
 -->{% endcomment %}
 
 <form name="cuForm" id="cuForm" method="POST">
@@ -46,7 +46,7 @@ form page (/contact-us/).
         </svg>
       </div>
     </div>
-  </div>  
+  </div>
   <div class="row">
     <div class="col-xs-12">
       <div>
@@ -310,8 +310,8 @@ form page (/contact-us/).
   </div>
   <div class="row">
     <div class="col-xs-12">
-    	<div class="form-group">	
-				<button type="submit" class="btn btn-lg btn-success submitbtn">Submit</button>
+    	<div class="form-group">
+				<button type="submit" class="btn btn-lg btn-success submitbtnform">Submit</button>
       </div>
     </div>
   </div>
