--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -6,6 +6,7 @@
     if ((host == window.location.host) && (window.location.protocol != "https:"))
         window.location.protocol = "https";
 </script>
+
 <meta charset="utf-8">
 <title>{{ page.title }}</title> {% if page.description %}
 <meta name="description" content="{{ page.description }}">
@@ -29,6 +30,7 @@
 <link href="{{ ASSET_PATH }}/css/style.css" rel="stylesheet">
 <link href="{{ ASSET_PATH }}/css/syntax.css" rel="stylesheet">
 <script src="{{ ASSET_PATH }}/js/application.js"></script>
+<script src="{{ ASSET_PATH }}/js/ouibounce.js"></script>
 
 <!-- Le fav and touch icons -->
 <!-- Update these with your own images
