--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -67,17 +67,25 @@
 							<li class = "dropdown">
           						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-gears"></i> Products <span class="caret"></span></a>
           						<ul class="dropdown-menu">
-									<li><a href="{{ BASE_PATH }}/Stratify-OS"><i class="fa fa-gear"></i> Stratify OS</a></li>
-									<li><a href="{{ BASE_PATH }}/hardware"><i class="fa fa-gears"></i> Hardware</a></li>
-                  <li><a href="{{ BASE_PATH }}/download"><i class="fa fa-download"></i> SDK Download</a></li>
-                  <li><a href="https://github.com/StratifyLabs" target="_blank"><i class="fa fa-code-fork"></i> Code</a></li>
-									<li><a href="{{ BASE_PATH }}/docs"><i class="fa fa-file-text-o"></i> Docs</a></li>
+                        <li><a href="{{ BASE_PATH }}/Stratify-Toolbox"><i class="fa fa-wrench"></i> Stratify Toolbox</a></li>
+                        <li><a href="{{ BASE_PATH }}/Stratify-OS"><i class="fa fa-cog"></i> Stratify OS</a></li>
+                        <li><a href="{{ BASE_PATH }}/Stratify-Link"><i class="fa fa-link"></i> Stratify Link</a></li>
+                        <li><a href="{{ BASE_PATH }}/Stratify-App"><i class="fa fa-desktop"></i> Stratify App</a></li>
 								</ul>
 							</li>
+              <li class = "dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-code-fork"></i> Developer <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="{{ BASE_PATH }}/hardware"><i class="fa fa-gears"></i> Hardware</a></li>
+                        <li><a href="{{ BASE_PATH }}/download"><i class="fa fa-download"></i> SDK Download</a></li>
+                        <li><a href="https://github.com/StratifyLabs" target="_blank"><i class="fa fa-github"></i> Code</a></li>
+                        <li><a href="{{ BASE_PATH }}/docs"><i class="fa fa-file-text-o"></i> Docs</a></li>
+                </ul>
+              </li>
 							<li><a href="{{ BASE_PATH }}/tips"><i class="fa fa-newspaper-o"></i> Blog</a></li>
 							<li><a href="{{ BASE_PATH }}/about"><i class="fa fa-info-circle"></i> About</a></li>
 						</ul>
-						<ul class="nav navbar-nav navbar-right">
+						<ul class="nav navbar-nav navbar-right hidden-sm">
 							<li><a href="https://github.com/StratifyLabs" target="_blank"><i class="fa fa-github fa-2x"></i> </a></li>
 							<li><a href="https://twitter.com/stratifylabs" target="_blank"><i class="fa fa-twitter fa-2x"></i> </a></li>
 							<li><a href="https://www.facebook.com/stratifylabs/" target="_blank"><i class="fa fa-facebook fa-2x"></i> </a></li>
