--- a/_includes/themes/twitter/toolbox-signup.html
+++ b/_includes/themes/twitter/toolbox-signup.html
@@ -15,7 +15,7 @@
 			        <h4 class="modal-title" id="myModalLabel"><b>Thanks</b> for checking out the Toolbox!</h4>
 			      </div>
 			      <div class="modal-body">
-							<p>If you want to have an opportunity to join our beta program launching in early 2018. Please sign up for our email list and we will let you know when the program is ready.</p>
+							<p>Please enter your email address for a chance to win a free Stratify Toolbox as part of our beta program.</p>
 						<!-- Begin MailChimp Signup Form -->
 						<form action="//stratifylabs.us13.list-manage.com/subscribe/post?u=84779f6d7271364d8f9420147&amp;id=7b3b32c0f9&amp;PAGESOURCE={{ page.page_source }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form form-inline" target="_blank" novalidate>
 						    <div id="mc_embed_signup_scroll" class="form-group">
