--- a/_includes/JB/stratify-os-resource-links.html
+++ b/_includes/JB/stratify-os-resource-links.html
@@ -1,28 +1,28 @@
 <div class="container">
 <div class="row" style="margin-top: 20px; margin-bottom: 20px; text-align: center">
 	<div class="col-md-3">
-		<a href="{{ BASE_PATH }}/hardware/" class="btn btn-primary" style="height:170px; width: 100%;">
+		<a href="{{ BASE_PATH }}/hardware/" class="btn btn-primary" style="height:170px; width: 100%; margin-bottom: 20px">
 			<h4>Hardware</h4>
 			<h1><b><i class="fa fa-gears"></i></b></h1>
 			<p>Stratify OS hardware</p>
 		</a>
 	</div>
 	<div class="col-md-3">
-		<a href="{{ BASE_PATH }}/download/" class="btn btn-success" style="height:170px; width: 100%;">
+		<a href="{{ BASE_PATH }}/download/" class="btn btn-success" style="height:170px; width: 100%; margin-bottom: 20px">
 			<h4>SDK</h4>
 			<h1><b><i class="fa fa-desktop"></i></b></h1>
 			<p>Compiler, IDE and tools</p>
 		</a>
 	</div>
 	<div class="col-md-3">
-		<a href="https://github.com/StratifyLabs" target="_blank" class="btn btn-warning" style="height:170px; width: 100%;">
+		<a href="https://github.com/StratifyLabs" target="_blank" class="btn btn-warning" style="height:170px; width: 100%; margin-bottom: 20px">
 			<h4>Code</h4>
 			<h1><b><i class="fa fa-github"></i></b></h1>
 			<p>BSPs and applications</p>
 		</a>
 	</div>
 	<div class="col-md-3">
-		<a href="{{ BASE_PATH }}/docs/" class="btn btn-info" style="height:170px; width: 100%;">
+		<a href="{{ BASE_PATH }}/docs/" class="btn btn-info" style="height:170px; width: 100%; margin-bottom: 20px">
 			<h4>Docs</h4>
 			<h1><b><i class="fa fa-file-text-o"></i></b></h1>
 			<p>API documentation</p>
