--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -44,6 +44,8 @@
 <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
 <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/84779f6d7271364d8f9420147/1a446bb78182a6171d917bde0.js");</script>
+
 </head>
 <body style="min-height: 200px; padding-top: 50px;">
 	<header class="navbar navbar-default navbar-fixed-top bs-docs-nav" role="banner">
