Blog post plus toolbox promo in blog

--- a/_includes/JB/blog-sidebar.html
+++ b/_includes/JB/blog-sidebar.html
@@ -12,7 +12,6 @@
 
 <!-- Siderail -->
 <div class="blogroll-navigation">
-
   <div class="filter-col-ctn">
     <h2><i class="fa fa-envelope"></i> Stratify Newsletter</h2>
     <!-- Begin MailChimp Signup Form -->
@@ -33,6 +32,17 @@
       </form>
     </div>
     <!--End mc_embed_signup-->
+  </div>
+
+  <div class="filter-col-ctn">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <h3>Stratify <b>Toolbox</b></h3>
+        <img class="post_image_tall" src="{{ BASE_PATH }}/images/toolbox-angle.jpg" />
+        <p>All-in-One Development and Debugging Tool! Sign up now for a chance to win a free Toolbox.</p>
+        <p><a class="btn btn-success" href="{{ BASE_URL }}/Stratify-Toolbox">Learn More</a></p>
+      </div>
+    </div>
   </div>
 
   <!-- Categories -->
