--- a/_includes/JB/contact-us-form.html
+++ b/_includes/JB/contact-us-form.html
@@ -103,13 +103,10 @@ form page (/contact-us/).
           <input type="radio" name="entry.905578561" value="Less than $10,000" required><i class="fa fa-circle-o fa-big"></i><i class="fa fa-dot-circle-o fa-big"></i> <span> Less than $10,000</span>
         </label>
         <label class="btn form-control">
-          <input type="radio" name="entry.905578561" value="More than $10,000 but less than $100,0000"><i class="fa fa-circle-o fa-big"></i><i class="fa fa-dot-circle-o fa-big"></i><span> More than $10,000 but less than $100,0000</span>
+          <input type="radio" name="entry.905578561" value="More than $10,000 but less than $100,000"><i class="fa fa-circle-o fa-big"></i><i class="fa fa-dot-circle-o fa-big"></i><span> More than $10,000 but less than $100,000</span>
         </label>
         <label class="btn active form-control">
-          <input type="radio" name="entry.905578561" value="More than $100,000 but less than $1M"><i class="fa fa-circle-o fa-big"></i><i class="fa fa-dot-circle-o fa-big"></i> <span> More than $100,000 but less than $1M</span>
-        </label>
-        <label class="btn active form-control">
-          <input type="radio" name="entry.905578561" value="More than $1M"><i class="fa fa-circle-o fa-big"></i><i class="fa fa-dot-circle-o fa-big"></i> <span> More than $1M</span>
+          <input type="radio" name="entry.905578561" value="More than $100,000"><i class="fa fa-circle-o fa-big"></i><i class="fa fa-dot-circle-o fa-big"></i> <span> More than $100,000</span>
         </label>
       </div>
     </div>
@@ -137,6 +134,9 @@ form page (/contact-us/).
     	<div class="form-group">
 				<button type="submit" class="btn btn-lg btn-success submitbtnform">Submit</button>
       </div>
+      <p>
+        <a href="{{ BASE_URL }}/privacy" target="_blank">Privacy Policy</a>
+      </p>
     </div>
   </div>
 </form>
