Updated to 7.2.1 and stratify link 3.12

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -99,7 +99,7 @@
   background-color: transparent;
 }
 
-input[type="text"].form-control, input[type="email"].form-control  {
+input[type="text"].form-control, input[type="email"].form-control, input[type="password"].form-control  {
   padding: 6px 0px;
   border-bottom: 1px solid #ccc;
 }
