Fixed issues #1 to #6

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,11 @@
 <footer style="background: #344555; color: #fff;">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <h4>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}</h4>
+            </div>
+            <div class="col-md-6" style="text-align: right;">
+                <h6><a class="btn btn-sm btn-default" href="https://github.com/StratifyLabs/StratifyLabs.github.io/issues/new?title=Stratify Labs {{ page.url }} has a problem&body=Please describe the problem." target="_blank">Report a problem with this page</a></h6>
             </div>
         </div>
     </div>
