--- a/_includes/JB/blog-sidebar.html
+++ b/_includes/JB/blog-sidebar.html
@@ -101,6 +101,7 @@
 
     </ul>
   </div> <!-- .blog-date-col -->
+  <a class="btn btn-sm btn-default" href="https://github.com/StratifyLabs/StratifyLabs.github.io/issues/new?title=Stratify Labs {{ page.url }} has a problem&body=Please describe the problem." target="_blank">Report a problem with this post</a>
 
 
 </div> <!-- .blogroll-navigation -->
