--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -41,7 +41,7 @@
                         <li><a href="https://github.com/StratifyLabs" target="_blank"><i class="fa fa-github fa-2x"></i> </a></li>
                         <li><a href="https://twitter.com/stratifylabs" target="_blank"><i class="fa fa-twitter fa-2x"></i> </a></li>
                         <li><a href="https://www.facebook.com/stratifylabs/" target="_blank"><i class="fa fa-facebook fa-2x"></i> </a></li>
-                        <li><a href="https://plus.google.com/b/111238224545721138802/111238224545721138802" target="_blank"><i class="fa fa-google-plus fa-2x"></i> </a></li>
+                        <li><a href="{{ BASE_PATH }}/signup"><btn class="btn btn-success">Login</btn> </a></li>
 
                     </ul>
                 </div>
