--- a/_includes/JB/stratify-os-feature-brief.html
+++ b/_includes/JB/stratify-os-feature-brief.html
@@ -12,7 +12,7 @@
 		<a class="btn btn-lg btn-success" href="{{ BASE_PATH }}/download/">Download</a>
 		</div>
 		<div class="col-md-6" style="margin-bottom: 2.0em">
-		<iframe width="100%" height="315" src="https://www.youtube.com/embed/K5sfHB4SMpI" frameborder="0" allowfullscreen></iframe>
+		<iframe width="100%" height="315" src="https://www.youtube.com/embed/e7PNh4W0tAA?rel=0" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
 </div>
