fix login, remove old SDK exe

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -55,7 +55,7 @@
                         <li><a href="https://github.com/StratifyLabs" target="_blank"><i class="fa fa-github fa-2x"></i> </a></li>
                         <li><a href="https://twitter.com/stratifylabs" target="_blank"><i class="fa fa-twitter fa-2x"></i> </a></li>
                         <li><a href="https://www.facebook.com/stratifylabs/" target="_blank"><i class="fa fa-facebook fa-2x"></i> </a></li>
-                        <li><a href="https://app.stratifylabs.co/" target="_blank" class="btn btn-primary" id="login-button" data-toggle="modal" data-target="#signinModal"><i class="fa fa-user"></i> Login</a></li>
+                        <li><a href="https://app.stratifylabs.co/" target="_blank"><i class="fa fa-user"></i> Login</a></li>
                     </ul>
                 </div>
             </div>
